New in SoWin 1.1.1a (so far):

New in SoWin 1.1.0 (2003-04-30):
* SoWinColorEditor
* SoWinMaterialEditor

New in SoWin 0.10.0 (2003-03-10):
* Microsoft Developer Studio project files for building without Cygwin
* NEWS file